Revert "feat: rename acknowledgement of service (CMC-1271) (#679)" (#704)
This reverts commit fcfae431099c7c9eb28c00c7f0b318f2626d329a.