@@ -12,33 +12,29 @@ import uk.gov.hmcts.reform.unspec.callback.CaseEvent;
 import uk.gov.hmcts.reform.unspec.model.CaseData;
 import uk.gov.hmcts.reform.unspec.model.common.Element;
 import uk.gov.hmcts.reform.unspec.model.documents.CaseDocument;
-import uk.gov.hmcts.reform.unspec.service.docmosis.aos.AcknowledgementOfClaimGenerator;
+import uk.gov.hmcts.reform.unspec.service.docmosis.aos.AcknowledgementOfServiceGenerator;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import static uk.gov.hmcts.reform.unspec.callback.CallbackParams.Params.BEARER_TOKEN;
 import static uk.gov.hmcts.reform.unspec.callback.CallbackType.ABOUT_TO_SUBMIT;
-import static uk.gov.hmcts.reform.unspec.callback.CaseEvent.GENERATE_ACKNOWLEDGEMENT_OF_CLAIM;
 import static uk.gov.hmcts.reform.unspec.callback.CaseEvent.GENERATE_ACKNOWLEDGEMENT_OF_SERVICE;
 import static uk.gov.hmcts.reform.unspec.utils.ElementUtils.element;
 
 @Service
 @RequiredArgsConstructor
-public class GenerateAcknowledgementOfClaimCallbackHandler extends CallbackHandler {
+public class GenerateAcknowledgementOfServiceCallbackHandler extends CallbackHandler {
 
-    private static final List<CaseEvent> EVENTS = List.of(
-        //TODO: CMC-1271 backwards compatibility
-        GENERATE_ACKNOWLEDGEMENT_OF_SERVICE,
-        GENERATE_ACKNOWLEDGEMENT_OF_CLAIM
-    );
+    private static final List<CaseEvent> EVENTS = Collections.singletonList(GENERATE_ACKNOWLEDGEMENT_OF_SERVICE);
 
-    private final AcknowledgementOfClaimGenerator acknowledgementOfClaimGenerator;
+    private final AcknowledgementOfServiceGenerator acknowledgementOfServiceGenerator;
     private final ObjectMapper objectMapper;
 
     @Override
     protected Map<String, Callback> callbacks() {
-        return Map.of(callbackKey(ABOUT_TO_SUBMIT), this::prepareAcknowledgementOfClaim);
+        return Map.of(callbackKey(ABOUT_TO_SUBMIT), this::prepareAcknowledgementOfService);
     }
 
     @Override
@@ -46,17 +42,17 @@ public class GenerateAcknowledgementOfClaimCallbackHandler extends CallbackHandl
         return EVENTS;
     }
 
-    private CallbackResponse prepareAcknowledgementOfClaim(CallbackParams callbackParams) {
+    private CallbackResponse prepareAcknowledgementOfService(CallbackParams callbackParams) {
         CaseData caseData = callbackParams.getCaseData();
         CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
 
-        CaseDocument acknowledgementOfClaim = acknowledgementOfClaimGenerator.generate(
+        CaseDocument acknowledgementOfService = acknowledgementOfServiceGenerator.generate(
             caseData,
             callbackParams.getParams().get(BEARER_TOKEN).toString()
         );
 
         List<Element<CaseDocument>> systemGeneratedCaseDocuments = caseData.getSystemGeneratedCaseDocuments();
-        systemGeneratedCaseDocuments.add(element(acknowledgementOfClaim));
+        systemGeneratedCaseDocuments.add(element(acknowledgementOfService));
         caseDataBuilder.systemGeneratedCaseDocuments(systemGeneratedCaseDocuments);
 
         return AboutToStartOrSubmitCallbackResponse.builder()
